initial swap from gentoo-wiki.com

--- a/Rsyslog.mw
+++ b/Rsyslog.mw
@@ -1,59 +1,24 @@
-{{Lowercase title}}
-{{InfoBox stack
-|{{InfoBox homepage|http://www.rsyslog.com|header=true}}
-|{{InfoBox wikipedia}}
-|{{InfoBox odoc|http://www.rsyslog.com/doc/master/index.html}}
-|{{InfoBox github|rsyslog/rsyslog}}
-|{{InfoBox irc|rsyslog}}
-|{{InfoBox ohloh}}
-}}
-
 From Wikipedia, the free encyclopedia:
-
-''Rsyslog is [[Article description::an open source software used on UNIX and Unix-like computer systems for forwarding log messages in an IP network.]] It implements the basic syslog protocol, extends it with content-based filtering, rich filtering capabilities, flexible configuration options and adds important features such as using TCP for transport.''
-
+''Rsyslog is an open source software used on UNIX and Unix-like computer systems for forwarding log messages in an IP network. It implements the basic syslog protocol, extends it with content-based filtering, rich filtering capabilities, flexible configuration options and adds important features such as using TCP for transport.''
 == Installation ==
-
-=== USE flags ===
-
-{{USEflag|package=app-admin/rsyslog}}
-
-=== Emerge ===
-
-Install {{Package|app-admin/rsyslog}}:
-
-{{Emerge|app-admin/rsyslog}}
-
-{{Note|It is a bad idea to run more than one system logger on a physical host. Other local loggers should be removed or disabled.}}
-
-== Configuration ==
-
-=== Services ===
-
-==== OpenRC ====
-
-Add rsyslog to default run level:
-
+{{Note|It is a bad idea to run several system loggers on one physical host}}
+emerge rsyslog
+{{RootCmd|emerge rsyslog}}
+Add rsyslog to default startup level
 {{RootCmd|rc-update add rsyslog default}}
-
-After the emerge has finished, rsyslog should work out of the box with the default configuration; at least for local logging.
-
-Start rsyslog by running:
-
-{{RootCmd|rc-service rsyslog start}}
-
-Check file {{Path|/var/log/messages}} for syslog entries:
-
-{{RootCmd|tail -f /var/log/messages|output=<pre>
+After emerge has finished, rsyslog should work out of the box with the shipped default configuration, at least for local logging.
+Start rsyslog
+{{RootCmd|/etc/init.d/rsyslog start}}
+Check file {{Path|/var/log/messages}} for syslog entries
+{{RootCmd|1=tail -f /var/log/messages}}
+Successful startup notifcation
+<pre>
 2011-07-24T00:31:06.268926+02:00 server kernel: imklog 5.8.1, log source = /proc/kmsg started.
 2011-07-24T00:31:06.269053+02:00 server rsyslogd: [origin software="rsyslogd" swVersion="5.8.1" x-pid="19116" x-info="http://www.rsyslog.com"] start
-</pre>}}
-
-=== Files ===
-
-Basic rsyslog configuration:
-
-{{FileBox|filename=/etc/rsyslog.conf|1=
+</pre>
+== Configuration ==
+Basic rsyslog configuration. 
+{{File|/etc/rsyslog.conf||<pre>
 # Support for Local System Logging
 $ModLoad imuxsock.so
 $IncludeConfig /etc/rsyslog.d/*
@@ -64,17 +29,18 @@ cron.*                                                  -/var/log/cron
 *.emerg                                                 *
 uucp,news.crit                                          -/var/log/spooler
 local7.*                                                /var/log/boot.log
+</pre>
 }}
-
-Typically messages are logged to files, the file has to be specified with full pathname. Rsyslog uses a simple syntax to filter incoming messages. Syslog messages are classified by facility and severity. According to [http://www.ietf.org/rfc/rfc5424.txt RFC5424] following severity groups have been defined:
-
-=== Severity ===
-
-{| class="table table-striped table-condensed" style="width: auto;" | + Severity
-|-
-! scope="col" width="5%" | Numerical Code
-! scope="col" width="10%" | Severity
-! Description
+Typically messages are logged to files, the file has to be specified with full pathname.
+Rsyslog uses a a simple syntax to filter incoming messages.
+Syslog messages are classified by facility and severity.
+According to rfc3164 following severity groups have been defined:
+===Severity===
+{|class="wikitable sortable" style="background-color:#fbfeff"
+|+Severity
+!Numerical Code
+!Severity
+!Description
 |- 
 | 0 || style="background: Magenta"| emerg || system is unusable
 |-
@@ -92,19 +58,16 @@ Typically messages are logged to files, the file has to be specified with full p
 |-
 | 7 || style="background: White"| debug || debug-level messages
 |}
-
-=== Facility ===
-
-List of facilities used by rsyslog. Most facilities names are self explanatory. Facilities local0 - local7 common usage is f.e. as network logs facilities for nodes and network equipment. Generally it depends on the situation how to classify logs and put them to facilities. See facilities more as a tool rather than a directive to follow.
-
-Facilities can be adjusted to meet the needs of the user:
-
-{|class="table table-striped table-condesned" style="width: auto;"
-|+ Facility
-|-
-! scope="col" width="5%" | Numerical Code
-! scope="col" width="10%" | Facility
-! Description
+===Facility===
+List of facilities used by rsyslog. Most facilities names are self explanatory.
+Facilities local0 - local7 common usage is f.e. as network logs facilities for nodes and network equipment.
+Generally it depends on the situation how to classify logs and put them to facilities. See facilities more as a tool rather than a directive to follow.
+You can configure it to your own needs.
+{|class="wikitable sortable" style="background-color:#fbfeff"
+|+Facility
+!Numerical Code
+!Facility
+!Description
 |- 
 | 0  || kern || kernel messages
 |-
@@ -155,48 +118,31 @@ Facilities can be adjusted to meet the needs of the user:
 | 23 || local7 || local use 7  (local7)
 |-
 |}
-
 === Filtering ===
-
-List of filtering examples:
-
+List of filtering examples
 * Redirect all incoming messages from all facilities and with all severeties to {{Path|/var/log/syslog}}
-  *.* -/var/log/syslog
+''*.* -/var/log/syslog''
 * Filter out messages with severity critical and save to file {{Path|/var/log/critical}}
-  *.crit -/var/log/critical
-* Do NOT redirect facilities mail, authentication and cron and mail to {{Path|/var/log/messages}}, look for the keyword '''none'''
-  mail.none;authpriv.none;cron.none -/var/log/messages
-
-=== Local logging ===
-
+''*.crit -/var/log/critical''
+* Do NOT redirect facilities mail, authentication and cron and mail to {{Path|/var/log/messages}}, look for the keyword ''none}}
+''mail.none;authpriv.none;cron.none -/var/log/messages''
+=== Local Logging ===
 Enable local logging from all facilities, to see local events at all.
-
-  $ModLoad imuxsock.so
-
-=== Remote logging ===
-
-To use remote logging to a syslog server, specify a client to log to a specific server or servers. And a server to receive messages sent by clients. Before configuring choose the protocol. Syslog messages can be sent using UDP or TCP. UDP is the default protocol and supported on most platforms. Not all platforms support TCP for syslog.
-
-==== Client ====
-
-To enable syslog UDP messages sending add following line to the {{Path|/etc/rsyslog.conf}} file.
-In this example rsyslog sends all facilities and all priorities ''*.*'' using protocol UDP ''@'' to remote server ''192.0.2.1''
-
-  *.*       @192.0.2.1
-
-To enable TCP support for syslog messages, put following line to the rsyslog configuraton file, TCP is enabled by adding ''@@''.
-
-  *.*       @@192.0.2.1
-
-If desired, hostnames can be substituted in for IP addresses.
-
-{{Important|Substitute <code>192.0.2.1</code> with the IP address of the rsyslog server.}}
-
-Below a example syslog client configuration to send syslog messages to a remote server via TCP.
-{{FileBox|filename=/etc/rsyslog.conf|1=
+''$ModLoad imuxsock.so''
+=== Remote Logging ===
+To use remote logging to a syslog server you need to specify a client to log to a specific server or servers. And a server to receive messages sent by clients. Before configuring you have to chose the protocol. Syslog messages can be sent with UDP or with TCP. UDP is the default protocol and supported on most platforms. Not all platforms support TCP for syslog.
+====Client====
+To enable syslog UDP messages sending add following line to your {{Path|/etc/rsyslog.conf}} file.
+In this example rsyslog sends all facilities and all priorities '''*.*''' using protocol UDP '''@''' to remote server '''192.168.20.254'''
+''*.*       @192.168.20.254''
+To enable TCP support for syslog messages, put following line to the rsyslog configuraton file, TCP is enabled by adding '''@@'''.
+''*.*       @@192.168.20.254''
+You can use also a hostname instead of a IP address.
+{{Note|Substitute '''192.168.20.254''' with the IP address of your own rsyslog server}}
+Below a example syslog client configuration sending UDP log messages to a remote server.
+{{File|/etc/rsyslog.conf||<pre>
 $ModLoad imuxsock.so
-*.*   @@192.0.2.1:10514
-
+*.*   @192.168.20.254:10514
 *.info;mail.none;authpriv.none;cron.none      /var/log/messages
 authpriv.*                                    /var/log/secure
 mail.*                                        /var/log/maillog
@@ -204,35 +150,22 @@ cron.*                                        /var/log/cron
 *.emerg                                       *
 uucp,news.crit                                /var/log/spooler
 local7.*                                      /var/log/boot.log
+</pre>
 }}
-
-==== Server ====
-
-To Provide UDP log reception and run the server on port 514.
+====Server====
+To Provide UDP Log reception and run the server on port 514.
 Running syslog with UDP is the default configuration.
-
-  $ModLoad imudp
-  $UDPServerRun 514
-
-UDP is not a reliable protocol. For more reliability run the server with TCP logging support.
-
-  $ModLoad imtcp
-  $InputTCPServerRun 10514
-
-To bind the UDP Port to an IP interface configure following entry, ensure the right sequence of definitions if binding to an interface:
-
-  $ModLoad imudp
-  $UDPServerAddress 192.0.2.1 # this entry MUST be before the $UDPServerRun directive
-  $UDPServerRun 514
-
+''$ModLoad imudp''
+''$UDPServerRun 514''
+UDP is not a reliable protocol, you could run the server with TCP logging support.
+''$ModLoad imtcp''
+''$InputTCPServerRun 10514''
 A simple configuration would look like this one:
-{{FileBox|filename=/etc/rsyslog.conf|1=
+{{File|/etc/rsyslog.conf||<pre>
 $ModLoad imuxsock.so
 $ModLoad imtcp.so
-$InputTCPServerAddress 192.0.2.1
 $InputTCPServerRun 10514
 $ModLoad imudp.so
-$UDPServerAddress 192.0.2.1
 $UDPServerRun 514
 *.info;mail.none;authpriv.none;cron.none      /var/log/messages
 authpriv.*                                    /var/log/secure
@@ -241,24 +174,17 @@ cron.*                                        /var/log/cron
 *.emerg                                       *
 uucp,news.crit                                /var/log/spooler
 local7.*                                      /var/log/boot.log
+</pre>
 }}
-
-=== Database logging ===
-
-Rsyslog supports logging to following databases:
-
-* [[MariaDB]]
-* [[MySQL]]
-* [[PostgreSQL]]
+=== Database Logging ===
+Rsyslog supports logging to following databases
+* MySQL
+* MariaDB
+* PostgreSQL
 * Oracle
-
-After choosing the database logs will be stored to a proper USE flag needs to be enabled and rsyslog has to be rebuild before continuing. This example uses a MySQL database.
-
-{{Note|Next steps assume a working MySQL database server running on localhost, for installation details follow the [[MySQL]] article.}}
-
-The package ships a SQL script named createDB.sql to create the database layout.
-
-{{FileBox|filename=/usr/share/doc/rsyslog-5.8.1/scripts/mysql/createDB.sql|lang=mysql|1=
+{{Note|Next steps assume you have a working sql database server running on localhost}}
+The package ships a the file with a SQL script named createDB.sql to create the database layout. 
+{{File|/usr/share/doc/rsyslog-5.8.1/scripts/mysql/createDB.sql||<pre>
 CREATE DATABASE Syslog;
 USE Syslog;
 CREATE TABLE SystemEvents
@@ -295,35 +221,20 @@ CREATE TABLE SystemEventsProperties
         ParamName varchar(255) NULL ,
         ParamValue text NULL
 );
+</pre>
 }}
-
 Import the {{Path|/usr/share/doc/rsyslog-5.8.1/scripts/mysql/createDB.sql}} file to create the "Syslog" database.
-
 {{Cmd|mysql -u root -p <  /usr/share/doc/rsyslog-5.8.1/scripts/mysql/createDB.sql}}
-
-Create a datebase user for the Syslog database:
-
-{{Cmd
-|GRANT ALL ON Syslog.* TO rsyslog-user@localhost IDENTIFIED BY - 'MySecretPassword';
-|FLUSH PRIVILEGES;
-|prompt=mysql>
-|color=white
-}}
-
+Create a datebase user for the Syslog database
+{{Cmd|grant ALL ON Syslog.* to rsyslog-user@localhost identified by - 'MySecretPassword'; flush privileges;}}
 To provide SQL database logging support, enable the needed module in {{Path|/etc/rsyslog.conf}}
-
-  $ModLoad ommysql.so
-
+''$ModLoad ommysql.so''
 Tell rsyslog to forward all data to the database, add following to the end of the {{Path|/etc/rsyslog.conf}} file:
-
-  *.* :ommysql:localhost,Syslog,rsyslog-user,MySecretPassword
-
+''*.* :ommysql:localhost,Syslog,rsyslog-user,MySecretPassword''
 Finally Restart the rsyslog server to adapt new settings
 {{RootCmd|/etc/init.d/rsyslog restart}}
-
 == Templates ==
-
-Many vendors format their syslog messages differently. If the network equipment logs to a central rsyslog server the difference in logging will be easy to notice. After some time of log dumping it will be difficult to filter the syslog server messages for a certain
+If your network equipment logs into a central rsyslog server you will notice many vendors format its syslog messages differently. So it will be difficult after some time to for you filter the syslog server messages for a certain 
 * Date
 * Facility
 * Severity
@@ -332,57 +243,47 @@ Many vendors format their syslog messages differently. If the network equipment 
 * ProcessID
 * MessageType
 * Message
-
+as they arrive at your own syslog server.
 To unify syslog messages to a certain or preferred format, Rsyslog uses templates which parse arriving messages and "rewrites" them to the desired format.
-
+{{Note|This section assumes syslog messages are already arriving at the previously configured SQL server}}
 To maintain a simple and modular configuration, templates are stored within the {{Path|/etc/rsyslog.d/}} directory.
-To include files stored within the rsyslog.d directory add following line to {{Path|/etc/rsyslog.conf}} file:
-
-  $IncludeConfig /etc/rsyslog.d/*.conf
-
-Templates should be stored to the {{Path|/etc/rsyslog.d/}} directory.
-
+To include files stored within the rsyslog.d directory add following line to /etc/rsyslog.conf file:
+''$IncludeConfig /etc/rsyslog.d/*.conf''
+Change to {{Path|/etc/rsyslog.d/}} directory
 {{RootCmd|cd /etc/rsyslog.d/}}
-
-{{Important|Following templates are working very good, but are not perfect.}}
-
 Here a simple template for a cisco IOS host which logs to rsyslogd:
-
-{{FileBox|filename=/etc/rsyslog.d/template_cisco.conf|1=
+{{File|/etc/rsyslog.d/template_cisco.conf||<pre>
 $template mysql_cisco, "insert into SystemEvents (Message, Facility, FromHost, Priority, DeviceReportedTime, ReceivedAt, InfoUnitID, SysLogTag) values ('%msg:R,ERE,1,DFLT:%[A-Z0-9_-]+: (.*)--end%', %syslogfacility%, '%fromhost%', %syslog
 priority%, '%timereported:::date-mysql%', '%timegenerated:::date-mysql%', %iut%, '%msg:R,ERE,0,DFLT:%[A-Z0-9_-]+:--end%')",SQL
+</pre>
 }}
-
 Here a simple template for a ScreenOS host which logs to rsyslogd: 
-{{FileBox|filename=/etc/rsyslog.d/template_netscreen.conf|1=
+{{File|/etc/rsyslog.d/template_netscreen.conf||<pre>
 $template mysql_netscreen, "insert into SystemEvents (Message, Facility, FromHost, Priority, DeviceReportedTime, ReceivedAt, InfoUnitID, SysLogTag) values ('%msg:R,ERE,1,DFLT:[a-zA-Z0-9-]+: (.*)--end%', %syslogfacility%, '%fromhost%', %s
 yslogpriority%, '%timereported:::date-mysql%', '%timegenerated:::date-mysql%', %iut%, '%msg:R,ERE,0,DFLT:[a-zA-Z0-9-]+:--end%')",SQL
+</pre>
 }}
-
 Here a simple template for Linux host which logs to rsyslogd:
-
-{{FileBox|filename=/etc/rsyslog.d/template_linux.conf|1=
-$template mysql_linux, "insert into SystemEvents (Message, Facility, FromHost, Priority, DeviceReportedTime, ReceivedAt, IntoUnitID, SysLogTag) values ('%msg%', %syslogfacility%, '%HOSTNAME%', %syslogpriority%, '%timereported:::
-date-mysql%', '%timegenerated:::date-mysql%', %iut%, '%syslogtag:R,ERE,1,FIELD:(.+)(\[<nowiki>[0-9]</nowiki>{1,5}\]).*--end%')" ,SQL
+{{File|/etc/rsyslog.d/template_linux.conf||<pre>
+$template mysql_linux,"insert into SystemEvents (Message, Facility, FromHost, Priority, DeviceReportedTime, ReceivedAt, InfoUnitID, SysLogTag, ProcessID) values ('%msg%', %syslogfacility%, '%HOSTNAME%',%syslogpriority%, '%timereported:::
+date-mysql%', '%timegenerated:::date-mysql%', %iut%, '%syslogtag:R,ERE,1,FIELD:(.+)(\[[0-9]{1,5}\]).*--end%', '%syslogtag:R,ERE,1,BLANK:\[([0-9]{1,5})\]--end%')",SQL
+</pre>
 }}
-
 Configure rsyslogd which predefined template to apply to which facility, add following template references to the end of the {{Path|/etc/rsyslog.conf}} file:
-
-*All messages arriving at facility '''local4''', are Cisco IOS messages:
-  local4.* :ommysql:localhost,Syslog,rsyslog-user,MySecretPassword;mysql_cisco
-*All messages arriving at facility '''local5''' , are ScreenOS messages:
-  local5.* :ommysql:localhost,Syslog,rsyslog-user,MySecretPassword;mysql_netscreen
-*All messages arriving at syslog consider as Linux messages, and ignore '''local4''' and '''local5''' facilities which have their own templates.
-  *.*;local4.none;local5.none :ommysql:localhost,Syslog,rsyslog-user,MySecretPassword;mysql_linux
-
-The following is an example of how the {{Path|/etc/rsyslog.conf}} file could look on a syslog '''server''' with working templates:
-
-{{FileBox|filename=/etc/rsyslog.conf|1=
+All messages arriving at facility '''local4''', are Cisco IOS messages:
+''local4.* :ommysql:localhost,Syslog,rsyslog-user,MySecretPassword;mysql_cisco''
+All messages arriving at facility '''local5''' , are ScreenOS messages:
+''local5.* :ommysql:localhost,Syslog,rsyslog-user,MySecretPassword;mysql_netscreen''
+All messages arriving syslog but NOT  '''local4''' and NOT '''local5''' are Linux messages:
+''*.*;local4.none;local5.none :ommysql:localhost,Syslog,rsyslog-user,MySecretPassword;mysql_linux''
+Reload rsyslog server to apply new changes.
+{{RootCmd|/etc/init.d/rsyslog reload}}
+Below a short example how the {{Path|/etc/rsyslog.conf}} file could look on your own syslog '''server''' to get templates working:
+{{File|/etc/rsyslog.conf||<pre>
 $ModLoad imudp
 $UDPServerRun 514
 $ModLoad ommysql.so
 $IncludeConfig /etc/rsyslog.d/*.conf
-
 *.info;mail.none;authpriv.none;cron.none	-/var/log/messages
 authpriv.*					/var/log/secure
 mail.*						-/var/log/maillog
@@ -390,53 +291,35 @@ cron.*						-/var/log/cron
 *.emerg						*
 uucp,news.crit					-/var/log/spooler
 local7.*					/var/log/boot.log
-
 local4.* :ommysql:localhost,Syslog,rsyslog-user,MySecretPassword;mysql_cisco
 local5.* :ommysql:localhost,Syslog,rsyslog-user,MySecretPassword;mysql_netscreen
 *.*;local4.none;local5.none :ommysql:localhost,Syslog,rsyslog-user,MySecretPassword;mysql_linux
+</pre>
 }}
-
-Reload rsyslog server to apply new changes:
-
-{{RootCmd|/etc/init.d/rsyslog reload}}
-
-Further examples can be found [http://www.rsyslog.com/doc/rsyslog_conf_templates.html here].
-
+Read [http://www.rsyslog.com/doc/rsyslog_conf_templates.html following article] to understand template definitions and usage in rsyslog.
 == Troubleshooting ==
-
-Check if a syslog process is running :
-
-{{RootCmd|ps ux {{!}} grep rsyslog|output=<pre>
+Check if a syslog process is running 
+{{RootCmd|<nowiki>ps ux | grep rsyslog</nowiki>}}
+<pre>
 root     9161  0.0  0.0 1323652  3424 ?        Sl   00:51   0:00 /usr/sbin/rsyslogd -c5 -i /var/run/rsyslogd.pid -f /etc/rsyslog.conf
-</pre>}}
-
-Verify network configuration:
-
-{{RootCmd|netstat -tulpen {{!}} grep rsyslog||output=<pre>
-udp        0      0 192.0.2.1:514             0.0.0.0:*                           0          33472286   9161/rsyslogd
-udp6       0      0 :::514                    :::*                                0          33472287   9161/rsyslogd
-</pre>}}
-
-Verify with the command logger, if messages are arriving in at the syslogserver:
-
+</pre>
+Verify network configuration 
+{{RootCmd|<nowiki>netstat -tulpen | grep rsyslog</nowiki>}}
+<pre>
+udp        0      0 0.0.0.0:514             0.0.0.0:*                           0          33472286   9161/rsyslogd
+udp6       0      0 :::514                  :::*                                0          33472287   9161/rsyslogd
+</pre>
+Verify with the command logger, messages are arriving in at the syslogserver
 {{Cmd|logger -t test my syslog-test-message}}
-
 Following message should appear in the {{Path|/var/log/messages}} file if rsyslog is working properly:
-
-{{RootCmd|tail /var/log/messages|output=<pre>
-...
+<pre>
 2011-11-23T00:47:05+01:00 Rsyslogserver test: my syslog-test-message
-</pre>}}
-
-== See also ==
-
-* {{See also|Syslog-ng}}
-
-== External resources ==
-* [https://www.rsyslog.com/doc/master/index.html Official documentation]
+</pre>
+== External links ==
+* [http://rsyslog.com Rsyslog official Website]
 * [http://www.rsyslog.com/doc/rsyslog_conf_templates.html Rsyslog Templates HOWTO]
-* [https://tools.ietf.org/html/rfc5424 RFC 5424 - The Syslog Protocol]
-
-[[Category:Server]]
-[[Category:Software]]
-[[Category:Daemons]]
+* http://freshmeat.net/projects/rsyslog/
+* [http://wiki.rsyslog.com/index.php/Configuration_Samples Rsyslog configuration samples]
+* [http://www.gentoo.org/doc/en/security/security-handbook.xml?part=1&chap=3#doc_chap2 Gentoo syslog section]
+* [http://www.ietf.org/rfc/rfc3164.txt RFC 3164]
+* [http://www.ietf.org/rfc/rfc5424.txt RFC 5424]
