--- a/Partition.mw
+++ b/Partition.mw
@@ -1,202 +1,120 @@
 {{InfoBox stack
-|{{InfoBox wikipedia|Disk partitioning|header=true}}
+|{{InfoBox wikipedia|Disk_partitioning|header=true}}
 }}
 
-== Master Boot Record (MBR) ==
+There are several ways to give the operating system access to the storage devices, this is a summery of possible methods and combinations of these.
+
+=== MBR ===
 Used for a long time to organize data, also called DOS-Partitions. Partition information is stored in the MBR of the device.
-* Widely spread and support in nearly all operating systems.
-* Very well documented.
-* Maximum of 4 primary partitions per device.
-* Maximum size of the device 2 TiB.
-* Using one as extended partition (of the 4 primary), it is possible to create additional logical partitions to work around the problem of only 4 partitions.
+Features:
+* widely spread and support in nearly all operating systems
+* very well documented
+* maximum of 4 primary partitions per device
+* maximum size of the device 2TB
+* using one as extended partition (of the 4 primary), it is possible to create additional logical partitions to work around the problem of only 4 partitions
 
-=== Programs ===
-
-The following programs can be used to create, alter, and remove MBR partitions:
-
-{| class="table table-striped table-condensed"
+==== Programs ====
+To create/alter MBR partitions
+{| class=wikitable
 |-
-! Program
-! Package
-! GUI
-! Function
+| Program
+| GUI
+| Function
 |-
-| cfdisk 
-| {{Package|sys-apps/util-linux}}
-| {{No}}
-| Create, alter, and remove partitions.
+| fdisk
+| No
+| create, remove, alter partitions
 |-
-| fdisk 
-| {{Package|sys-apps/util-linux}}
-| {{No}}
-| Create, alter, and remove partitions.
-|-
-| parted
-| {{Package|sys-block/parted}}
-| {{No}}
-| Create, alter, remove, check, copy partitions and file systems.
-|-
-| gparted
 | {{Package|sys-block/gparted}}
-| {{Yes|GTK+}}
-| GNOME Partition Editor; create, alter, and remove partitions.
-|-
-| partitionmanager
-| {{Package|sys-block/partitionmanager}}
-| {{Yes|Qt5}}
-| KDE Partition Manager; create, alter, and remove partitions.
+| Qt/GTK
+| create, remove, alter, resize partitions
 |}
 
-=== Supported Operating Systems ===
+=== GPT ===
+In GUID partition system a small amount of disk space at the beginning of the device is used to store the partition information. Its main advantage is the supported size of storage devices and it creates a backup of the partition table at the end of the device.
 
-* BSD (Mac OS X) - full support.
-* DOS - full support.
-* Linux - full support.
-* Solaris - full support.
-* Windows - full support.
+* widely spread and support in most modern operating systems
+* used to require the [[GRUB2]] bootloader, but the functionality was backported to earlier versions
+* maximum of 128 primary partitions per device
+* maximum size of the device 9ZB
 
-== GUID Partition Table (GPT) ==
-
-In GUID ('''G'''lobal '''U'''nique '''ID'''entifier) partition system a small amount of disk space at the beginning of the device is used to store the partition information. Its main advantage is the supported size of storage devices and the creation of a backup of the partition table at the end of the device.
-
-* Widely spread and support in most modern operating systems.
-* Maximum of 128 primary partitions per device.
-* Maximum size of the device 8 ZiB.
-
-=== Programs ===
-
-The following programs can be used to create, alter, and remove [[wikipedia:GUID_Partition_Table|'''GPT''']] partitions:
-
-{| class="table table-striped table-condensed"
+==== Programs ====
+To create/alter GPT partitions
+{| class=wikitable
 |-
-! Program
-! Package
-! GUI
-! Function
+| Program
+| GUI
+| Function
 |-
-| gptfdisk
-| {{Package|sys-apps/gptfdisk}}
-| {{No}}
-| Create, alter, remove, convert MBR to GPT, and recreate partition tables from backup.
+| {{Package|ys-apps/gptfdisk}}
+| No
+| create, remove, alter, resize partitions, convert MBR to GPT, recreate partition tables from backup
 |-
-| parted
-| {{Package|sys-block/parted}}
-| {{No}}
-| Create, alter, remove, check, copy partitions and file systems.
-|-
-| gparted
 | {{Package|sys-block/gparted}}
-| {{Yes|GTK+}}
-| GNOME Partition Editor; create, alter, and remove partitions.
-|-
-| partitionmanager
-| {{Package|sys-block/partitionmanager}}
-| {{Yes|Qt5}}
-| KDE Partition Manager; create, alter, and remove partitions.
+| Qt/GTK
+| create, remove, alter, resize partitions
 |}
 
-=== Supported Operating Systems ===
+=== LVM ===
+[[LVM]] is a complete suite to dynamically manage partitons, storage devices or other underlying systems as volumes.
+* widely spread and support in most modern operating systems
+* needs [[GRUB2]] bootoader
+* maximum size of the device depends on the underlying systems limitations
+* maximum size of Logcial Volumes is 8 EB on 64bit Linux and 16TB on 32bit Linux
+* storage devices, raid system, network storage (e.g. iSCSI) can be used complete as Physical Volume (no need of partitioning)
+* it provides basic forms of redundancy like mirror, raid5 or stripset for performance
+{{Note|to use features like dynamic resizing, the used filesystem should be resizeable as well}}
 
-* BSD (Mac OS X) - full support.
-* Linux - full support.
-* Windows - Installs into the {{path|/boot/EFI/Microsoft/}} subdirectory of the [[EFI System Partition|ESP]].
-
-== Logical Volume Manager (LVM) ==
-
-[[LVM]] is a complete suite to dynamically manage partitions, storage devices or other underlying systems as volumes.
-* Widely spread and supported in most modern operating systems.
-* Maximum size of the device depends on the underlying systems limitations.
-* Maximum size of Logical Volumes is 8 EiB on 64-bit Linux and 16 TiB on 32-bit Linux.
-* Storage devices, RAID system, network storage (e.g. iSCSI) can be used as Physical Volumes (no need of partitioning).
-* Provides basic forms of data redundancy (RAID 1, RAID 5) or stripset (RAID 0) for performance.
-{{Note|To use features like dynamic resizing, the used filesystem should be resizeable as well.}}
-
-=== Programs ===
-
+==== Programs ====
 The following programs come with {{Package|sys-fs/lvm2}}
-
-{| class="table table-striped table-condensed"
+{| class=wikitable
 |-
-! Program
-! GUI
-! Function
+| Program
+| GUI
+| Function
 |-
 | pvcreate
-| {{No}}
-| Create or remove Physical Volumes of storage devices/systems.
+| No
+| create, remove Physical Volumes of storage devices/systems
 |-
 | vgcreate
-| {{No}}
-| Groups PV as Volume Group.
+| No
+| group PV as Volume Group
 |-
 | lvcreate
-| {{No}}
-| Create, alter, and remove volumes.
+| No
+| create, remove, alter, resize volumes
 |}
 
-The following programs can be used to create, alter, and remove LVM partitions:
-
-{| class="table table-striped table-condensed"
-|-
-! Program
-! Package
-! GUI
-! Function
-|-
-| partitionmanager
-| {{Package|sys-block/partitionmanager}}
-| {{Yes|Qt5}}
-| KDE Partition Manager; create, alter, and remove LVM PVs, VGs, LVs.
-|}
-
-=== Supported Operating Systems ===
-
-* BSD - cannot boot itself, needs Linux [[GRUB2]] with dual boot.
-* Linux - full support.
-
-{{Note|This is the Linux specific LVM implementation, other OS have their own systems, see [[Wikipedia:Logical volume management#Implementations|Logical volume management]].}}
-
-== ZFS ==
-
+=== ZFS ===
 [[ZFS]] is a complete suite to dynamically manage storage and file system.
 
-* Support in Linux (via ZFSOnLinux), Solaris, FreeBSD.
-* Needs [[GRUB2]] bootoader.
-* Maximum size of a single zpool is 256 ZiB
-* Storage devices can be used complete as vdev (no need of partitioning)
-* Zpools are created once and cannot be resized afterwards. Every volume has access to the full capacity of the zpool, this can be reduced via quota.
-* It provides forms of redundancy like RAID 1 (mirroring), and RAID 0 (striping) for performance. Also supports RAID 5, RAID 6, etc.
-* Has its own filesystem with features like compression, copy on write, and deduplication.
+* support in Linux (via ZFSOnLinux), Solaris, FreeBSD
+* needs [[GRUB2]] bootoader
+* maximum size of a single zpool is 256 ZB
+* storage devices can be used complete as vdev (no need of partitioning)
+* zpools are created once and cannot be resized afterwards. Every volume has access to the full capacity of the zpool, this can be reduzed via quota.
+* it provides several forms of redundancy like mirror (also performance), raid5, raid6 or stripset for performance
+* comes with its own file system with features like compression, copy on write, deduplication.
 
-=== Programs ===
-
-The following programs come with {{Package|sys-fs/zfs}}:
-
-{| class="table table-striped table-condensed"
+==== Programs ====
+The following programs come with {{Package|sys-fs/zfs}}
+{| class=wikitable
 |-
-! Programraid1
-! GUI
-! Function
+| Program
+| GUI
+| Function
 |-
 | zpool
-| {{No}}
-| Manage and organize vdevs in zpools.
+| No
+| manage and organize vdevs in zpools
 |-
 | zfs
-| {{No}}
-| Create, alter (resize), and remove volumes.
+| No
+| create, remove, alter, resize volumes
 |}
 
-=== Supported Operating Systems ===
-
-* BSD - full support.
-* Linux - built as external module because of the CDDL and GPL licence conflict - mostly supported.
-* Solaris - full support.
-
 == See also ==
-
 * [[Complete Handbook/Putting the minimal environment in place]]
-* [[Filesystem/Security]]
-* [[Handbook:AMD64/Blocks/Disks]]
 
 [[Category:Core system]]
