--- a/Dell_Latitude_D630_D830.mw
+++ b/Dell_Latitude_D630_D830.mw
@@ -9,7 +9,7 @@ This article describes the setup of Gentoo Linux on a Dell Latitude D630 laptop.
 {{User:Astaecker/Computer/kbd|model=105 keys}}
 {{User:Astaecker/Computer/ALPS|model=ALPS GlidePoint}}
 {{User:Astaecker/Computer/Ethernet|model=Broadcom NetXtreme BCM5755M|driver=tg3}}
-{{User:Astaecker/Computer/Wifi|model=Intel PRO/Wireless 3945ABG / 4965AGN|driver=iwl3945 / iwl4965|note=See [[Intel Corporation PRO/Wireless 3945ABG]]}}
+{{User:Astaecker/Computer/Wifi|model=Intel PRO/Wireless 3945ABG / 4965AGN|driver=iwl3945 / iwl4965}}
 {{User:Astaecker/Computer/Wifi|model=Dell Wireless 1390 / 1490 / 1505|driver=b43}}
 {{User:Astaecker/Computer/row|type=Network|device=Modem|model=Connexant HSF|status=note|driver=Connexant HSF|note=Proprietary software, full version with costs}}
 {{User:Astaecker/Computer/row|type=Network|device=UMTS modem|model=Dell Wireless 5520 HSDPA}}
@@ -24,12 +24,11 @@ This article describes the setup of Gentoo Linux on a Dell Latitude D630 laptop.
 {{User:Astaecker/Computer/ACPI}}
 {{User:Astaecker/Computer/acpi_dock|model=Dell Latitude D models}}
 {{User:Astaecker/Computer/Fingerprint|model=SGS Thomson Microelectronics|driver=fprint}}
-{{User:Astaecker/Computer/row|type=Misc|device=Sensors|status=full|driver=[[lm_sensors|coretemp]], [[i8k]]}}
-{{User:Astaecker/Computer/PCSC-Lite|model=O2 Micro OZ776 CCID|driver=ccid}}
+{{User:Astaecker/Computer/Sensors|driver=i8k, coretemp}}
+{{User:Astaecker/Computer/ccid|model=O2 Micro OZ776 CCID}}
 |}
 
-== See also ==
-
-* {{See also|Power management}}
+== Common laptop articles ==
+* [[Power Management]]
 
 [[Category:Laptops]]
