--- a/Intel_Core_2.mw
+++ b/Intel_Core_2.mw
@@ -1,28 +1,18 @@
-{{InfoBox stack|{{InfoBox wikipedia|header=true}}}}
+This article describes the setup of an Intel Core 2 Solo/Duo/Quad processor.
 
-This article [[Article description::describes the setup of an Intel Core 2 Solo/Duo/Quad processor.]]
-
-The Intel Core 2 line of processors supports both the 32-bit and 64-bit mode. The general pros and cons can be read about in the [[Wikipedia:64-bit computing#32-bit_vs_64-bit|Wikipedia article]]. By now only very few applications do not support 64-bit mode or work in a 32-bit compatibility mode.
-
-__TOC__
+== 32-bit vs 64-bit ==
+This processor supports both the 32-bit and 64-bit mode. You read about general pros and cons at the [[Wikipedia:64-bit#32-bit_vs_64-bit|Wikipedia]]. By now only very few applications don't support 64-bit mode or work in a 32-bit compatibility mode.
 
 == Installation ==
-
 === BIOS ===
-
-If you have a dual or quad core Intel Core 2 CPU, you should first check if all cores are enabled:
-
+With a dual or quad core check first, if all of them are enabled:
 {{Cmd|cat /proc/cpuinfo}}
-
-If not, enable options like ''<code>APIC</code>'', ''<code>MultiCore</code>'', etc. in the [[BIOS]].
+If not, enable options like ''<code>APIC</code>'', ''<code>MultiCore</code>'', etc. in your [[BIOS]].
 
 === Kernel ===
-
-Activate the following kernel options.
-
-For a single-core processor:
-
-{{KernelBox|1=
+You need to activate the following kernel options:
+* For a single-core processor:
+{{Kernel||
 Processor type and features  --->
     Subarchitecture Type ()  --->
         (X) PC-compatible
@@ -30,9 +20,8 @@ Processor type and features  --->
         (X) Core 2/newer Xeon
 }}
 
-For a dual- or quad-core processor:
-
-{{KernelBox|1=
+* For a dual- or quad-core processor:
+{{Kernel||
 Processor type and features  --->
     [*] Symmetric multi-processing support
     Subarchitecture Type ()  --->
@@ -40,59 +29,54 @@ Processor type and features  --->
     Processor family ()  --->
         (X) Core 2/newer Xeon
 
-    dual-core
+    ''dual-core''
     (2) Maximum number of CPUs (2-256)
 
-    quad-core
+    ''quad-core''
     (4) Maximum number of CPUs (2-256)
 }}
 
 === Software ===
+{{File|/etc/make.conf||<pre>
+USE="... mmx sse sse2 sse3 ssse3 ..."
 
-{{FileBox|filename=[[:/etc/portage/make.conf]]|title=|lang=bash|1=
-CPU_FLAGS_X86="mmx sse sse2 sse3 ssse3"
-}}
+# Penryn and newer
+USE="... mmx sse sse2 sse3 ssse3 sse4 sse4a sse4_1..."
 
-{{FileBox|filename=[[:/etc/portage/make.conf]]|title=Penryn and newer|lang=bash|1=
-CPU_FLAGS_X86="mmx sse sse2 sse3 ssse3 sse4 sse4a sse4_1"
-}}
-
-{{FileBox|filename=[[:/etc/portage/make.conf]]|title=CFLAGS|lang=bash|1=
-# Note: -fomit-frame-pointer only makes a difference on x86 since it is included in -O2 on amd64
 CFLAGS="-march=native -O2 -pipe -fomit-frame-pointer"
 CXXFLAGS="${CFLAGS}"
-}}
 
-{{FileBox|filename=[[:/etc/portage/make.conf]]|title=MAKEOPTS (Intel Core 2 Solo)|lang=bash|1=
+# Intel Core 2 Solo
 MAKEOPTS="-j2"
-}}
 
-{{FileBox|filename=[[:/etc/portage/make.conf]]|title=MAKEOPTS (Intel Core 2 Duo)|lang=bash|1=
+# Intel Core 2 Duo
 MAKEOPTS="-j3"
+
+# Intel Core 2 Quad
+MAKEOPTS="-j5"
+</pre>}}
+
+{{USEflag
+|mmx+yes+yes
+|sse+yes+yes
+|sse2+yes+yes
+|sse3++yes+[[Wikipedia:Streaming SIMD Extensions 3|Streaming SIMD Extensions 3]]
+|ssse3++yes+[[Wikipedia:Supplemental Streaming SIMD Extensions 3|Supplemental Streaming SIMD Extensions 3]]
+|sse4++yes+[[Wikipedia:Streaming SIMD Extensions 4|Streaming SIMD Extensions 4]]
 }}
 
-{{FileBox|filename=[[:/etc/portage/make.conf]]|title=MAKEOPTS (Intel Core 2 Quad)|lang=bash|1=
-MAKEOPTS="-j5"
-}}
+== Advanced Configuration ==
+* [[Intel microcode]]
+* [[Power Mjanagement/Processor|Power Management]]
 
 === Temperature sensor ===
-
-See the [[lm sensors]] article and activate the kernel driver '''coretemp'''.
+See the [[lm sensors]] article and activate the kernel driver '''coretemp''':
 
 === Virtualization ===
-
-Most of these processors support Intel VT. Exceptions include:
-
+Most of these processors support Intel VT. Exceptions are:
 * Merom <T5600
 * Allendale E4xxx
 * E7xxx
+See the [[:Category:Virtualization]].
 
-See the [[:Category:Virtualization|Virtualization category]].
-
-== See also ==
-
-* {{See also|Intel microcode}}
-* {{See also|Power management/Processor}}
-* {{See also|CPU_FLAGS_X86}}
-
-[[Category:CPUs]][[Category:Intel]]
+[[Category:Processors]]
