--- a/Intel_microcode.mw
+++ b/Intel_microcode.mw
@@ -1,290 +1,25 @@
-<languages />
-<translate>{{InfoBox stack
-|{{InfoBox wikipedia|Microcode|header=true}}
-|{{InfoBox package|sys-firmware/intel-microcode}}
-}}
-
-This article [[Article description::describes the process of updating the [[microcode]] on Intel processors.]]
+This article describes the setup of microcode-ctl to update the microcode of Intel processors.
 
 == Installation ==
 
-{{Important|The microcode-ctl utility has been deprecated as of version 1.28-r1 (Gentoo unstable)<ref>https://gitweb.gentoo.org/repo/gentoo.git/commit/?id=719cc5ef240b766953ddbe1e7a6593f8091eed12 The microcode-ctl utility has been deprecated as of version 1.28-r1 (Gentoo unstable) and no longer contains the init script. It also does not work on certain CPUs such as Intel Haswells.</ref> and was [https://gitweb.gentoo.org/repo/gentoo.git/commit/sys-apps/microcode-ctl?id{{=}}6915ad825559f329b8d2989ab232932906a8cbf4 removed from the Gentoo repository].}}
-
 === Kernel ===
-
-The following kernel support is required to be built-in:
-
-{{KernelBox|title=Enable CONFIG_BLK_DEV_INITRD, CONFIG_MICROCODE, and CONFIG_MICROCODE_INTEL|1=
-General setup  --->
-    [*] Initial RAM filesystem and RAM disk (initramfs/initrd) support
+You need to activate the following kernel options:
+{{Kernel||
 Processor type and features  --->
-    <*> CPU microcode loading support
-    [*]   Intel microcode loading support
+    [*] /dev/cpu/microcode - microcode support
+    [*]   Intel microcode patch loading support
 }}
 
-{{Warning|Modules do not work for early microcode, so make sure microcode loading is built-in.}}
-
-=== Emerge ===
-
-Install the microcode firmware package and the manipulation tool:
-
-{{Emerge
-|sys-firmware/intel-microcode sys-apps/iucode_tool
-|params+=--noreplace
-}}
+=== Software ===
+You can now install {{Package|sys-apps/microcode-ctl}}:
+{{Emerge|microcode-ctl}}
 
 == Configuration ==
 
-{{Note|If the <code>initramfs</code> USE flag is active the <code>intel-microcode</code> ebuild will automatically install a cpio archive of all microcode into {{c|/boot/intel-uc.img}}.}}
-
-To manually generate the microcode cpio archive use {{c|iucode_tool}}:
-
-{{RootCmd|1=iucode_tool -S --write-earlyfw{{=}}/boot/early_ucode.cpio /lib/firmware/intel-ucode/*|output=<pre>
-iucode_tool: system has processor(s) with signature 0x000306c3
-iucode_tool: Writing selected microcodes to: /boot/early_ucode.cpio
-</pre>}}
-
-=== Genkernel ===
-
-If you use {{c|genkernel}} to generate your initrd then add the {{c|--microcode}} option to have it prepend an early cpio with the Intel and AMD microcode inside. No modifications to your bootloader config are necessary below.
-
-=== Syslinux ===
-
-Multiple initrd files are separated by commas in the <code>INITRD</code> line. Set {{Path|early_ucode.cpio}} to load first:
-
-{{FileBox|filename=/boot/syslinux.cfg|lang=text|1=
-LABEL gentoo
-    MENU LABEL Gentoo Linux 4.4.6
-    LINUX /vmlinuz-4.4.6-gentoo
-    INITRD /early_ucode.cpio,/initrd-4.4.6-gentoo.img
-}}
-
-=== GRUB Legacy ===
-
-Add the generated microcode to the kernel command-line as the first <code>initrd</code>. The root initramfs goes second separated by space.  This step is necessary even if the system does not use an initrd image in order to boot. The microcode update merely leverages the initrd hooks:
-
-{{FileBox|title=Example GRUB Legacy configuration for microcode update|filename=/boot/grub/grub.conf|lang=text|1=
-title Gentoo Linux 4.4.6
-root (hd0,0)
-kernel /boot/vmlinuz-4.4.6-gentoo root=/dev/sda3
-initrd /boot/intel-uc.img /boot/initrd.img
-}}
-
-=== GRUB ===
-
-Starting with version 2.02-r1, GRUB supports loading an early microcode. If the microcode file is named after one of the following: {{Path|intel-uc.img}}, {{Path|intel-ucode.img}}, {{Path|amd-uc.img}}, {{Path|amd-ucode.img}}, {{Path|early_ucode.cpio}}, or {{Path|microcode.cpio}}, it will be automatically detected when running {{c|grub-mkconfig}}. To declare a microcode file named differently, e.g. {{Path|ucode.cpio}}, add this line to {{Path|/etc/default/grub}}:
-
-{{FileBox|filename=/etc/default/grub|title=|lang=bash|1=
-GRUB_EARLY_INITRD_LINUX_CUSTOM="ucode.cpio"
-}}
-
-Regenerate the {{Path|grub.cfg}} with:
-
-{{RootCmd|1=grub-mkconfig -o /boot/grub/grub.cfg|output=<pre>
-Generating grub configuration file ...
-Found linux image: /boot/vmlinuz-4.6.3-gentoo
-Found initrd image: /boot/early_ucode.cpio /initramfs-genkernel-x86_64-4.6.3-gentoo
-done
-</pre>}}
-
-{{Note|This is similar to what you should see, minus the initramfs if you do not have one.}}
-
-Or, for earlier versions than 2.02-r1, edit {{Path|grub.cfg}} directly to add the {{Path|early_ucode.cpio}} as your first initrd:
-
-{{FileBox|filename=/boot/grub/grub.cfg|1=
-menuentry 'Gentoo Linux 4.14' {
-  root=hd0,1
-  linux /boot/linux-4.14.12 root=LABEL=ROOT rootfstype=ext4 ro
-  initrd /boot/early_ucode.cpio /boot/initrd.img
-}
-}}
-
-Reboot and you're all done.
-
-=== rEFInd ===
-
-{{FileBox|filename=/efi/EFI/refind/refind.conf|lang=text|1=
-menuentry Linux {
-
-  icon EFI/refind/icons/os_gentoo.png
-  volume foo
-  loader boot/vmlinuz
-  options "initrd=boot/early_ucode.cpio initrd=boot/bootsplash-initramfs console=tty1 ro root=foo"
-
-  submenuentry "Old Kernel" {
-    loader boot/vmlinuz.old
-  }
-}
-}}
-
-This example system has the EFI partition {{Path|/dev/sda1}} mounted to {{Path|/efi}}. The Linux kernel and initrd files have been placed in {{Path|/boot}} on the Linux rootfs.
-
-If you are using the '''initrd''' keyword instead of the '''options''' keyword for specifying initrd, then try specifying multiple initrd files via separate '''initrd''' keywords, or migrate the declarations into '''options'''. Specifying multiple initrd via one '''initrd''' keyword fails on rEFInd. As always, make sure {{Path|boot/early_code.cpio}} is the first initrd specified.
-
-You can review and edit the kernel <var>cmdline</var> options from the rEFInd bootloader. With your Gentoo OS entry highlighted, press {{Key|F2}} to access the menu entries, and press {{Key|F2}} again over the desired entry to review and edit. This is very useful for quick experimenting without need to edit {{Path|refind.conf}}.
-
-See {{Path|refind.conf}} for keyword descriptions and [https://www.rodsbooks.com/refind/ The rEFInd Homepage] for more on how to use rEFInd.
-
-=== systemd-boot ===
-
-Add the microcode as an argument to an '''initrd''' line. If you already have an initrd line, ensure the microcode line occurs first. The path to the microcode should be absolute to the root of the ESP.
-
-{{FileBox|filename=/boot/EFI/loader/entries/example|lang=text|1=
-title      Gentoo/Linux
-version    4.13.13
-options    root=/dev/sda1
-linux      /4.13.13/linux
-initrd     /4.13.13/intel_ucode
-initrd     /4.13.13/initrd
-}}
-
-For more information, see [https://www.freedesktop.org/wiki/Specifications/BootLoaderSpec/ The Boot Loader Specification].
-
-=== Xen (EFI) ===
-
-Add a line to your {{Path|xen.cfg}} with the <var>ucode</var> option. The path to the microcode is relative to the {{Path|xen.efi}} binary, so you will need to write the microcode into the correct location (default is {{Path|/boot/EFI/Gentoo}}) or copy it there.
-
-{{FileBox|filename=/boot/EFI/Gentoo/xen.cfg|lang=ini|1=
-[global]
-default=gentoo
-
-[gentoo]
-kernel=vmlinuz-4.4.6-gentoo root=/dev/sda1
-ramdisk=initrd-4.4.6-gentoo.img
-ucode=early_ucode.cpio
-}}
-
-For more information, see the [https://xenbits.xen.org/docs/unstable/misc/efi.html Xen EFI] documentation.
-
-== Verification ==
-
-Here is an example of a CPU with no available microcode updates (microcode already current) or the system was not configured to load them properly:
-
-{{RootCmd|1=dmesg {{!}} grep microcode|output=<pre>
-[    1.196567] microcode: CPU0 sig=0x6fd, pf=0x80, revision=0xa3
-[    1.196575] microcode: CPU1 sig=0x6fd, pf=0x80, revision=0xa3
-[    1.196623] microcode: Microcode Update Driver: v2.01 <tigran@aivazian.fsnet.co.uk>, Peter Oruba
-</pre>}}
-
-Here is the same CPU but with microcode updates being applied successfully:
-
-{{RootCmd|1=dmesg {{!}} grep microcode|output=<pre>
-[    0.000000] microcode: microcode updated early to revision 0xa4, date = 2010-10-02
-[    1.207385] microcode: CPU0 sig=0x6fd, pf=0x80, revision=0xa4
-[    1.207393] microcode: CPU1 sig=0x6fd, pf=0x80, revision=0xa4
-[    1.207445] microcode: Microcode Update Driver: v2.01 <tigran@aivazian.fsnet.co.uk>, Peter Oruba
-</pre>}}
-
-{{Note|If you use genkernel and legacy GRUB, you will not have the first line. Just check the microcode revision before and after the changes.}}
-
-The loaded microcode revision can be verified by running:
-
-{{Cmd|1=grep microcode /proc/cpuinfo|output=<pre>
-microcode	: 0xa4
-microcode	: 0xa4
-</pre>}}
-
-== Microcode-ctl ==
-
-{{Important|The microcode-ctl utility has been deprecated as of 1.28-r1 (Gentoo unstable) and [https://gitweb.gentoo.org/repo/gentoo.git/commit/sys-apps/microcode-ctl?id{{=}}6915ad825559f329b8d2989ab232932906a8cbf4 removed from the Gentoo repository].}}
-
-== New method without initram-fs/disk (efistub compatible) ==
-
-{{Warning|This will only work on a 64-bit kernel and will have no effect otherwise. On 32-bit systems you need to use an initramfs.}}
-
-{{Note|This method should be preferable, especially for EFI-Stub systems (some motherboard firmware might have issues with parsing/passing custom boot command line options), since these changes are less likely to leave your system unbootable (and possibly unrepairable without an EFI compatible rescue disk which can be very tricky on headless machines) the way a broken firmware boot entry and/or incorrect initram-fs/disk would, while it also works on BIOS systems or EFI systems with custom bootloaders on disk. However, this requires a relatively recent kernel version (possibly unstable at the time of writing). It was tested with Linux 4.8.0}}
-
-=== Software ===
-
-The {{Package|sys-firmware/intel-microcode}}-20171117-r1 package has been rewritten to use {{c|iucode_tool}} to process microcode data files. Users can now use the <var>MICROCODE_SIGNATURES</var> variable to install only a subset of microcode data files.
-
-To install microcode data files for the system processor(s):
-
-{{FileBox|filename=/etc/portage/make.conf|1=
-MICROCODE_SIGNATURES="-S"
-}}
-
-To install microcode data files for a specific processor use <code>MICROCODE_SIGNATURES="-s 0x000306c3"</code>, or <code>MICROCODE_SIGNATURES="-s !0x000306c3"</code> to exclude a specific processor. An empty or undefined <var>MICROCODE_SIGNATURES</var> variable will install all microcode data files.
-
-Install the microcode data files:
-
-{{Emerge|sys-firmware/intel-microcode}}
-
-The {{Package|sys-firmware/intel-microcode}}-20171117-r1 installs {{c|iucode_tool}} which can be used to identify the processor signature(s).
-
-{{Cmd|iucode_tool -S|output=<pre>
-iucode_tool: system has processor(s) with signature 0x000306c3
-</pre>}}
-
-To find the appropriate filename(s) for the listed signature(s) use:
-
-{{Cmd|iucode_tool -S -l /lib/firmware/intel-ucode/*|output=<pre>
-iucode_tool: system has processor(s) with signature 0x000306c3
-[...]
-microcode bundle 49: /lib/firmware/intel-ucode/06-3c-03
-[...]
-selected microcodes:
-  049/001: sig 0x000306c3, pf_mask 0x32, 2017-01-27, rev 0x0022, size 22528
-</pre>}}
-
-The signature is found in microcode bundle <code>49</code>, so the filename to use is {{Path|/lib/firmware/intel-ucode/06-3c-03}}.
-
-=== Kernel ===
-
-Enable and configure the <var>CONFIG_MICROCODE</var>, <var>CONFIG_MICROCODE_INTEL</var>, <var>CONFIG_FIRMWARE_IN_KERNEL</var>, <var>CONFIG_EXTRA_FIRMWARE</var> and <var>CONFIG_EXTRA_FIRMWARE_DIR</var> kernel options.
-
-{{Warning|Every option ''must'' be set as built into the kernel, not as a kernel module.}}
-
-{{KernelBox|title=Enabling Microcode Loading Support|1=
-Processor type and features  --->
-    <*> CPU microcode loading support
-    [*]   Intel microcode loading support
-
-Device Drivers  --->
-  Generic Driver Options  --->
-    Firmware Loader  --->
-      -*-   Firmware loading facility 
-      (intel-ucode/06-3c-03) Build named firmware blobs into the kernel binary 
-      (/lib/firmware) Firmware blobs root directory (NEW) 
-}}
-
-{{Note|The <var>CONFIG_EXTRA_FIRMWARE</var> and <var>CONFIG_EXTRA_FIRMWARE_DIR</var> options need to be set to the values identified by {{c|iucode_tool}}. In this example for an Intel i7-4790K processor, <var>CONFIG_EXTRA_FIRMWARE</var> is set to <code>intel-ucode/06-3c-03</code> and <var>CONFIG_EXTRA_FIRMWARE_DIR</var> is set to <code>/lib/firmware</code>.}}
-
-{{Note|The <var>CONFIG_EXTRA_FIRMWARE</var> option allows specifying multiple firmware files by listing them space-separated.}}
-
-[[Kernel/Rebuild|Rebuild and install]] the kernel as usual.
-
-== Verification ==
-
-After the next reboot, you should see something like this:
-
-{{RootCmd|1=dmesg {{!}} grep microcode|output=<pre>
-[    0.000000] microcode: microcode updated early to revision 0x22, date = 2017-01-27
-[    1.153262] microcode: sig=0x306c3, pf=0x2, revision=0x22
-[    1.153815] microcode: Microcode Update Driver: v2.2.
-</pre>}}
-
-{{Note|Note how this is the very first step of the kernel logs now.}}
-
-{{Note|If you use genkernel and legacy GRUB, you will not have the first line. Just check the microcode revision before and after the changes.}}
-
-{{Note|Be aware that injecting the microcode update directly into the motherboard firmware (which might sounds tempting) might result in CPU0 being updated but the rest of the CPUs (or CPU cores in a multi-core system) being left at their initial revision (which might cause more problems than running them all at the same initial version). And, since most stock motherboard firmware has some microcode updates (even in their initial release versions), it's probably a good enough reason for everybody to make sure their kernel tries to update all CPUs (and cores) to the same version (so, let this update driver running even if the kernel has the same version which is stored in the motherboard firmware). Injecting the microcode into the firmware might be desirable still (to make sure it's loaded for the boot CPU before the kernel is loaded and able to update the rest of the microcode).}}
-
-== See also ==
-
-* {{See also|Intel}}
-* {{See also|Microcode}}
-
-== External resources ==
-
-* http://www.win-raid.com/t154f16-Tool-Guide-News-quot-UEFI-BIOS-Updater-quot-UBU.html - An example unofficial source for microcodes
-
-== References ==
-
-{{reflist}}
-
-</translate>
+=== Service ===
+You can now start microcode-ctl:
+{{RootCmd|/etc/init.d/microcode-ctl start}}
+To start microcode-ctl at boot time, add it your default runlevel:
+{{RootCmd|rc-update add microcode-ctl}}
 
 [[Category:Processors]]
-[[Category:Intel]]
-[[Category:Firmware]]
