Created page with "This article describes the setup of an internal SATA or PATA (IDE) hard disk drive.  == Installation ==  === Hardware detection === To choose the right driver, first detect the u..."

--- a/HDD.mw
+++ b/HDD.mw
@@ -1,79 +1,65 @@
-{{InfoBox stack
-|{{InfoBox wikipedia|Hard_disk_drive|header=true}}
-}}
-
-This article [[Article description::describes the setup of an internal SATA or PATA (IDE) rotational hard disk drive.]]
+This article describes the setup of an internal SATA or PATA (IDE) hard disk drive.
 
 == Installation ==
 
 === Hardware detection ===
-
-To choose the right driver, first detect the used storage controller. {{c|[[Hardware detection|lspci]]}} can be used for this task:
-{{RootCmd|lspci {{!}} grep --color -E "IDE{{!}}SATA"}}
-
-(At runtime) show identification and feature info:
-
-{{RootCmd|hdparm -I /dev/sdX}}
-
-For more detailed information see the [[hdparm]] article.
+To choose the right driver, first detect the used storage controller. You can use [[Hardware detection#lspci|lspci]] for this task:
+{{RootCmd|lspci {{!}} egrep --color "IDE{{!}}SATA"}}
 
 === BIOS ===
-
-For AHCI SATA controllers, check the system's [[BIOS]] or firmware to see if if AHCI has been activated.
+If you have an AHCI SATA controller, check your [[BIOS]], if AHCI is activated.
 
 === Kernel ===
+{{Note|If your root partition is on this drive, your drivers have to be build into the kernel.}}
 
-{{Note|If the root partition is on this drive, the file system drivers have to be built into the kernel.}}
-
-Activate the following kernel options:
-
-{{KernelBox|1=
+You need to activate the following kernel options:
+{{Kernel||
 Device Drivers --->
-   <*> Serial ATA and Parallel ATA drivers  --->
-      [*] ATA ACPI Support
+    <*> Serial ATA and Parallel ATA drivers  --->
+        [*]   ATA ACPI Support
 
-   If the drive is connected to a SATA Port Multiplier:
-      [*] SATA Port Multiplier support
+        ''If your drive is connected to a SATA Port Mulitplier:''
+        [*]   SATA Port Multiplier support
 
-   Select the driver for the SATA controller, e.g.:
-      <*> AHCI SATA support (ahci)
+        ''Select the driver for your storage controller:''
+{{User:Astaecker/Kernel table|level=2
+  |{{User:Astaecker/Kernel table row|AHCI SATA support|ahci|}}
+}}
+{{Clear}}
 
-   If the drive is connected to an IDE controller:
-      [*] ATA SFF support
-      [*] ATA BMDMA support
 
-   Select the driver for the IDE controller, e.g.:
-   <*> Intel ESB, ICH, PIIX3, PIIX4 PATA/SATA support (ata_piix)
+        ''If your drive is connected to an IDE port:''
+        [*]   ATA SFF support
+        [*]     ATA BMDMA support
+{{User:Astaecker/Kernel table|level=2
+  |{{User:Astaecker/Kernel table row|Intel ESB, ICH, PIIX3, PIIX4 PATA/SATA support|ata_piix|}}
+}}{{Clear}}
 
-   SCSI device support  ---> 
-      <*> SCSI device support
-      <*> SCSI disk support
+
+    SCSI device support  ---> 
+        <*> SCSI device support
+        <*> SCSI disk support
 }}
 
 == Configuration ==
+You need to create [[partition]]s and install a [[filesystems|filesystem]], if not already existing.
 
-Generally when configuring a hard disk drive one or more [[partition]] will need to be created and [[filesystem]] written into them.
+== Advanced Configuration ==
+* [[hdparm]] - change hard drive performance parameters
+* [[Power Management/HDD|Power Management]]
+* [[smartmontools]] - S.M.A.R.T. monitoring tools
 
 == Usage ==
-
-Filesystems can be mounted in several ways. Notable methods include:
-
-* The {{c|[[mount]]}} command.
-* {{Path|[[fstab|/etc/fstab]]}} file - Automatic mount at boot time (does not support on demand mount).
-* [[removable media]] - Automated mount on demand.
-* [[AutoFS]] - Automated mount on demand.
+You can mount the filesystems in several ways:
+* Single [[mount]].
+* [[fstab]] - Automatic mount at boot time.
+* [[removable media]] - mount at demand.
+* [[autofs]] - Automatic mount at demand.
 
 == Troubleshooting ==
-
-* See [https://ata.wiki.kernel.org/index.php/Libata_error_messages Libata error messages]
-* See [[E2fsprogs/badblocks]]
-
-== See also ==
-
-* {{See also|SSD}}
+See [http://ata.wiki.kernel.org/index.php/Libata_error_messages libata wiki].
 
 == External resources ==
-
-* [https://ata.wiki.kernel.org/ libata wiki]
+* [http://ata.wiki.kernel.org/ libata wiki]
 
 [[Category:Storage devices]]
