Created page with "This article describes the setup of an internal optical drive like CD, DVD or Blue-Ray drives.  == Installation == === Hardware detection === To choose the right driver, first de..."

--- a/CDROM.mw
+++ b/CDROM.mw
@@ -1,81 +1,68 @@
-<languages />
-<translate>
-<!--T:1-->
-This article describes the setup of an internal optical drive like CD, DVD, and Blu-Ray drives.
+This article describes the setup of an internal optical drive like CD, DVD or Blue-Ray drives.
 
-== Installation == <!--T:2-->
+== Installation ==
+=== Hardware detection ===
+To choose the right driver, first detect the used storage controller. You can use [[Hardware detection#lspci|lspci]] for this task:
+{{RootCmd|lspci {{!}} egrep --color "IDE{{!}}SATA"}}
 
-=== Hardware detection === <!--T:3-->
-
-<!--T:4-->
-To choose the right driver, first detect the used storage controller. [[Hardware detection|lspci]] can be used for this task:
-
-<!--T:5-->
-{{RootCmd|lspci {{!}} grep --color -E "IDE{{!}}SATA"}}
-
-=== Kernel === <!--T:6-->
-
-<!--T:7-->
-Activate the following kernel options:
-
-<!--T:8-->
-{{KernelBox|title=Kernel options for optical storage media|1=
+=== Kernel ===
+You need to activate the following kernel options:
+{{Kernel||
+{{Kernel||
 Device Drivers --->
-   <*> Serial ATA and Parallel ATA drivers  --->
-      [*] ATA ACPI Support
-  
-      # If the drive is connected to a SATA Port Multiplier:
-      [*] SATA Port Multiplier support
-  
-      # Select the driver for the SATA controller, e.g.:
-      <*> AHCI SATA support (ahci)
-  
-      # If the drive is connected to an IDE controller:
-      [*] ATA SFF support
-      [*] ATA BMDMA support
-  
-      # Select the driver for the IDE controller, e.g.:
-        <*> Intel ESB, ICH, PIIX3, PIIX4 PATA/SATA support (ata_piix)
-  
-   SCSI device support  ---> 
-      <*> SCSI device support
-      <*> SCSI CDROM support
-      <*> SCSI generic support
-  
-File systems  --->
-   CD-ROM/DVD Filesystems  --->
-      <M> ISO 9660 CDROM file system support
-      [*] Microsoft Joliet CDROM extensions
-      [*] Transparent decompression extension
-      <M> UDF file system support
+    <*> Serial ATA and Parallel ATA drivers  --->
+        [*]   ATA ACPI Support
+
+        ''If your drive is connected to a SATA Port Mulitplier:''
+        [*]   SATA Port Multiplier support
+
+        ''Select the driver for your storage controller:''
+{{User:Astaecker/Kernel table|level=2
+  |{{User:Astaecker/Kernel table row|AHCI SATA support|ahci|}}
+}}
+{{Clear}}
+
+
+        ''If your drive is connected to an IDE port:''
+        [*]   ATA SFF support
+        [*]     ATA BMDMA support
+{{User:Astaecker/Kernel table|level=2
+  |{{User:Astaecker/Kernel table row|Intel ESB, ICH, PIIX3, PIIX4 PATA/SATA support|ata_piix|}}
+}}
+{{Clear}}
+
+
+    SCSI device support  ---> 
+        <*> SCSI device support
+        <*> SCSI CDROM support
+        <*> SCSI generic support
 }}
 
-== Usage == <!--T:9-->
+=== Filesystem ===
+{{Kernel||
+File systems  --->
+    CD-ROM/DVD Filesystems  --->
+        <M> ISO 9660 CDROM file system support
+        [*]   Microsoft Joliet CDROM extensions
+        [*]   Transparent decompression extension
+        <M> UDF file system support
+}}
 
-<!--T:10-->
-Filesystems can be mounted in several ways:
+== Advanced Configuration ==
+* [[hdparm]] - change hard drive performance parameters
+* [[Power Management/CDROM|Power Management]]
 
-<!--T:11-->
-* [[mount]] - Command for mounting file systems
+== Usage ==
+You can mount the filesystems in several ways:
+* Single [[mount]].
 * [[fstab]] - Automatic mount at boot time.
-* [[removable media]] - Mount on demand.
-* [[AutoFS]] - Automatic mount on demand.
+* [[removable media]] - mount at demand.
+* [[autofs]] - Automatic mount at demand.
 
-== Troubleshooting == <!--T:12-->
+== Troubleshooting ==
+See [http://ata.wiki.kernel.org/index.php/Libata_error_messages libata wiki].
 
-<!--T:13-->
-See the [https://ata.wiki.kernel.org/index.php/Libata_error_messages Libata error messages] article on the libata wiki.
-
-== See also == <!--T:14-->
-
-<!--T:15-->
-* {{See also|hdparm}}
-
-== External resources == <!--T:16-->
-
-<!--T:17-->
-* [https://ata.wiki.kernel.org/ libata wiki]
-
-</translate>
+== External resources ==
+* [http://ata.wiki.kernel.org/ libata wiki]
 
 [[Category:Storage devices]]
