--- a/Evdev.mw
+++ b/Evdev.mw
@@ -1,55 +1,38 @@
-{{Lowercase title}}
-
-'''evdev''' is 
-* The open source input driver ({{package|x11-drivers/xf86-input-evdev}}) for many input devices like keyboards, mice, joysticks and more.
-* The short name of the Linux kernel's event interface (CONFIG_INPUT_EVDEV), needed for [[libinput#Kernel|libinput]].
-* The [https://packages.gentoo.org/useflags/input_devices_evdev <code>input_devices_evdev</code>] USE flag.
+{{DISPLAYTITLE:evdev}}
+''evdev'' is the [[X.Org]] input driver for alot input devices like keyboards, mic, joysticks and more.
 
 == Installation ==
 
 === Kernel ===
-
-You need [[USB]] support, if you have an USB input device. Also you need to activate the following kernel options:
-
-{{KernelBox|title=PS/2 keyboard/mouse support|1=
+You need to activate the following kernel options:
+{{Kernel||
 Device Drivers  --->
     Input device support  --->
         <*>   Event interface
+
+        ''If a mouse is connected to a PS/2 port:''
         [*]   Mice  --->
               <*>   PS/2 mouse
+
+       ''If a keyboard is connected to a PS/2 port:''
         -*-   Keyboards  --->
               <*>   AT keyboard
-}}
 
-{{KernelBox|title=USB input device support|1=
-Device Drivers  --->
-    HID support  --->
-        <*> HID bus support
-        <*> Generic HID driver
-            USB HID support  --->
-                <*> USB HID transport layer
-}}
-
-Some USB mice (e.g. Logitech G5 and Razer Naga 2014) additionally need the following option:
-
-{{KernelBox|title=Improved transaction support|1=
-Device Drivers  --->
-    [*] USB support  --->
-        [*]   Improved Transaction Translator scheduling
+    ''If an input device is connected to an USB port:''
+    [*] HID Devices  --->
+        -*-   Generic HID support
+        <*>   USB Human Interface Device (full HID) support
 }}
 
 === Driver ===
-
 {{INPUT_DEVICES|evdev}}
 
 == Configuration ==
 
 === Keyboard layout ===
-
-To set the default layout copy the file {{Path|10-evdev.conf}} to {{Path|/etc/X11/xorg.conf.d}} and edit the keyboard section, e.g. for a German layout:
-
+To set the default layout copy the file <tt>10-evdev.conf</tt> to <tt>/etc/X11/xorg.conf.d</tt> and edit the keyboard section, e.g. for a german layout:
 {{RootCmd|cp /usr/share/X11/xorg.conf.d/10-evdev.conf /etc/X11/xorg.conf.d/}}
-{{FileBox|filename=/etc/X11/xorg.conf.d/10-evdev.conf|lang=xorg.conf|1=
+{{File|/etc/X11/xorg.conf.d/10-evdev.conf||
 Section "InputClass"
         Identifier "evdev keyboard catchall"
         ...
@@ -57,11 +40,5 @@ Section "InputClass"
         Option "xkb_layout" "de"
 EndSection
 }}
-
-For more info please read the [[Xorg/Guide#Configuring_the_keyboard|Configuring the keyboard]].
-
-== See also ==
-
-* {{See also|Libinput}}
 
 [[Category:Input devices]]
