Created page with "{{DISPLAYTITLE:synaptics}} ''synaptics'' is the [[X.Org]] input driver for Synaptics and ALPS touchpads.  == Installation ==  === Kernel === You need to activate the following ke..."

--- a/Synaptics.mw
+++ b/Synaptics.mw
@@ -1,128 +1,50 @@
-<translate>
-{{Lowercase title}}
-
-''synaptics'' is the open source input driver for Synaptics and ALPS touchpads.
+{{DISPLAYTITLE:synaptics}}
+''synaptics'' is the [[X.Org]] input driver for Synaptics and ALPS touchpads.
 
 == Installation ==
 
 === Kernel ===
-
 You need to activate the following kernel options:
-
-{{KernelBox|
+{{Kernel||
 Device Drivers  --->
-   Input device support  --->
-      <*>   Event interface
-      [*]   Mice  --->
-         <*>   PS/2 mouse
+    Input device support  --->
+        <*>   Event interface
+        [*]   Mice  --->
+              <*>   PS/2 mouse
 }}
 
-{{Note|You may also need additional drivers under the Mice menu to support your touchpad. i.e. "Synaptics PS/2 mouse protocol extension". The touchpad may also be USB, not PS/2.  If you are unsure, select multiple drivers and check what the kernel uses later with "lspci -k".}}
-
 === Driver ===
-
-{{INPUT_DEVICES|synaptics libinput}}
+{{INPUT_DEVICES|synaptics}}
 
 == Configuration ==
+The driver has alot options to tune it to your needs. For a detailed description of the options see the [[man page]]:
+{{Cmd|man synaptics}}
 
-The driver has a lot options to tune it to your needs. See the ''synaptics'' [[man page]] for more information.
-
-=== Fixed configuration ===
-
-Referring to [[xorg.conf]] there should have a {{Path|/etc/X11/xorg.conf.d}} directory on the system. If there is none create one:
-
-{{RootCmd|mkdir /etc/X11/xorg.conf.d}}
-
-Configure file {{Path|/etc/X11/xorg.conf.d/50-synaptics.conf}} as in the example below:
-
-{{FileBox|filename=/etc/X11/xorg.conf.d/50-synaptics.conf|lang=text|
+=== Fixed Configuration ===
+As an example you can enable an option to configure the driver also at runtime. To do so you have to change your [[xorg.conf]]:
+{{File|/etc/X11/xorg.conf/99-synaptics||
 Section "InputClass"
-        Identifier "touchpad catchall"
-        Driver "synaptics"
+        Identifier "All touchpads"
+        Option SHMConfig "on"
         MatchIsTouchpad "on"
-        Option "VertEdgeScroll" "on"
-        Option      "CircularScrolling"         "on"
-        Option      "VertScrollDelta"          "-111"
-        Option      "HorizScrollDelta"         "-111"
-        Option      "TapButton1"       	          "1"
 EndSection
 }}
 
 === Configuration at runtime ===
-
 You need to enable above option to be able to configure the driver also at runtime. Changes at runtime will be lost with the next start of the X-server. To keep them, add them to the above config file.
 
 You can configure the driver with the program ''<code>synclient</code>''. Some examples:
-
-List all parameters:
-
+* List all parameters:
 {{Cmd|synclient -l}}
-
-Cut the right side of the touch area to expand the vertical scroll area:
-
+* Cut the right side of the touch area to expand the vertical scroll area:
 {{Cmd|synclient RightEdge{{=}}5000}}
-
-Finding the right edge parameter:
-
+* Finding the right edge parameter:
 {{Cmd|synclient -m 50}}
-
-Disable the mouse click function:
-
+* Disable the mouse click function:
 {{Cmd|synclient MaxTapTime{{=}}0}}
 
-Finally, You can dump Your handpicked configuration to the {{Path|99-synaptics}} file pasting output of the following command inside the <code>InputClass</code> section:
 
-{{Cmd|synclient -l {{!}} sed -e '1d' -e 's/^ \+/Option\t"/g' -e 's/ \+{{=}} /"\t"/g' -e 's/$/"/g'}}
-
-Alternatively there is the [[KDE]] systemsettings module {{Package|kde-misc/synaptiks}}:
-
-{{Emerge|kde-misc/synaptiks}}
-
-== Troubleshooting ==
-=== My Touchpad is not recognized ===
-
-If your touchpad does not show in either <code>lsusb</code> nor <code>lspci</code>, that might be due to your PS/2 controller and how it is handled by the kernel<ref>[https://www.linuxquestions.org/questions/linux-hardware-18/trackpad-on-acer-laptop-not-working-4175621311/ Trackpad on Acer laptop not working]</ref>. One indication is if 
-
-{{Cmd|dmesg {{!}} grep i8042}}
-
-returns something along the lines of
-
-{{CodeBox|1=i8042: PNP: PS/2 appears to have AUX port disabled, if this is incorrect please boot with i8042.nopnp}}
-
-That AUX port is where the touchpad is connected<ref>[https://unix.stackexchange.com/a/28810 Explanation on PS/2 Controllers]</ref>.
-Try adding the following to your kernel command line, e.g. in {{Path|/etc/default/grub}}:
-
-{{FileBox|filename=/etc/default/grub|lang=text|
-1=GRUB_CMDLINE_LINUX_DEFAULT="... i8042.noloop i8042.nomux i8042.nopnp i8042.reset ..."
-}}
-
-Now, you should update your grub.cfg:
-
-{{RootCmd| grub-mkconfig -o /boot/grub/grub.cfg}}
-
-If, after rebooting with these parameters, you get a generic <code>Logitech PS/2 mouse</code> input device, you may need to add the appropriate PS/2 extension driver to your Kernel config:
-
-{{KernelBox|
-Device Drivers  --->
-   Input device support  --->
-      <*>   Event interface
-      [*]   Mice  --->
-         <*>   PS/2 mouse
-            [ /*]   Elantech PS/2 protocol extension
-            [ /*]   Sentelic Finger Sensing Pad PS/2 protocol extension
-            [ /*]   eGalax TouchKit PS/2 protocol extension
-}}
-
-After rebooting, your touchpad should be recognized correctly.
-
-== See also ==
-
-* [[libinput]] - A drop-in replacement for the "slowly deprecating evdev and synaptics input drivers".
-
-</translate>
-
-== References ==
-
-{{reflist}}
+Alternativly there is the [[KDE SC 4|KDE]] systemsettings module {{Package|kde-misc/synaptiks}}:
+{{Emerge|synaptiks}}
 
 [[Category:Input devices]]
